Minor updates to config

--- a/_config.yml
+++ b/_config.yml
@@ -2,18 +2,18 @@ baseurl: ""
 url: "https://hackathonx.de"
 title: hackathon x
 description: >-
-  Gaming im Museum
+  Gaming in the museum
 author: Hack &amp; Söhne
 google_site_verification: tjukQQpmzsqdbPMnXjNBcrTMyJvr9QDKjFdGEuhEJwM
 smooch_appid: 5db616dc3c1b9300101aef38
 lang: en_US
-image: /assets/images/htv_cover_image.jpg
-logo: /assets/images/htv_cover_image.jpg
+image: /assets/images/logos/hackathon-x/SVG/BLM_museumx_LOGO_hackathon_weiss-rot.svg
+logo: /assets/images/logos/hackathon-x/SVG/BLM_museumx_LOGO_hackathon_weiss-rot.svg
 
-slogan: Gaming im Museum
+slogan: Gaming in the museum
 info_email: info@hackundsoehne.de
 date: December 7th and 8th, 2019
-apply_url: https://apply.hacktival.io/
+apply_url: https://apply.hackathonx.de/
 deadline: "December 1, 2019 23:59:59 GMT+02:00"
 deadline_title: "Application Deadline:"
 deadline_expired: "The application deadline expired."
