Add jury member, challenge + minor fixes

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   link: /about.html
 - name: Jury
   link: /jury.html
-- name: Categories
+- name: Challenge
   link: /categories.html
 - name: Schedule
   link: /schedule.html
