--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ image: /assets/images/logos/hackathon-x/SVG/BLM_museumx_LOGO_hackathon_weiss-rot
 logo: /assets/images/logos/hackathon-x/SVG/BLM_museumx_LOGO_hackathon_weiss-rot.svg
 
 slogan: Gaming in the museum
-info_email: info@hackundsoehne.de
+info_email_hs: info@hackundsoehne.de
+info_email_musx: creative@landesmuseum.de
 date: December 7th and 8th, 2019
 apply_url: https://apply.hackathonx.de/
 deadline: "December 1, 2019 23:59:59 GMT+02:00"
