Intro text update, minor fixes

--- a/_data/saturday.yml
+++ b/_data/saturday.yml
@@ -5,7 +5,7 @@
 - time: 10:45 - 12:00
   name: Teambuilding - Project Brainstorming
 - time: 10:45 - 13:00
-  name: Mentors available for QA
+  name: "Mentors available for QA; museum open for explorations"
 - time: "11:00"
   name: Hacking starts!
 - time: 13:00 - 14:30
