--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@ info_email_hs: info@hackundsoehne.de
 info_email_musx: creative@landesmuseum.de
 date: December 7th and 8th, 2019
 apply_url: https://apply.hackathonx.de/
-deadline: "Thu Dec 05 2019 23:59:59 GMT+01:00"
+deadline: "2019-12-05T23:59:59.000+01:00"
+deadline_string: "December 5th 2019, 23:59:59 GMT+1"
 deadline_title: "Application Deadline:"
 deadline_expired: "The application deadline expired."
 
